--- a/packages/ui/src/scss/mixins/_transition.scss
+++ b/packages/ui/src/scss/mixins/_transition.scss
@@ -12,3 +12,39 @@ $transition-function: cubic-bezier(0, 0, 0.4, 1);
 @mixin default-transition($property...) {
   @include transition($property $transition-duration $transition-function);
 }
+
+// @keyframes spin-in{
+//   from{
+//     opacity:0;
+//     transform: translate(-100px, -100px) rotate(-720deg) scale(0.5);
+//   }
+//   to{
+//     opacity: 1;
+//     transform: translate(0, 0) rotate(0deg) scale(1);
+//   }
+// }
+
+@keyframes rise-in {
+  from{
+    opacity: 0;
+    visibility: visible;
+    transform: translateY(50px);
+  }to{
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
+  
+}
+
+// .spin-in{
+//   animation: spin-in 1s ease-out forwards;
+//   @include default-transition(opacity,transform)
+// }
+
+.rise-in{
+  visibility: hidden;
+  animation: rise-in 0.6s ease-out forwards;
+  // animation-delay: 1.2s;
+  @include default-transition(opacity,transform,visibility);
+}
