fix(prettier): fix as double quote

--- a/apps/client/src/styles/components/datepicker.css
+++ b/apps/client/src/styles/components/datepicker.css
@@ -63,7 +63,7 @@
   border-bottom: none;
 }
 
-.react-datepicker-popper[data-placement^='bottom'] .react-datepicker__triangle {
+.react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle {
   fill: white;
   color: white;
 }
