--- a/apps/client/src/styles/components/player.css
+++ b/apps/client/src/styles/components/player.css
@@ -79,7 +79,7 @@
 .rhap_time {
   width: 56px !important;
   font-size: 18px;
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   font-weight: 700;
 }
 
