--- a/apps/client/src/styles/globals.css
+++ b/apps/client/src/styles/globals.css
@@ -45,7 +45,7 @@
     font: inherit;
     color: inherit;
     background: none;
-    border: none;
+    /* border: none; */
     outline: none;
   }
 
